finished draft of docs + minor grooming to standardize
